crates/crisp-reveal/tests/snapshots/reveal_ownership__reveal_hello_lifetimes.snap
---
source: crates/crisp-reveal/tests/reveal_ownership.rs
expression: out
---
greet(who: Named) -> str
id(x: T) -> T
main() -> ()
