crates/crisp-reveal/tests/snapshots/reveal_ownership__reveal_hello_ownership.snap
---
source: crates/crisp-reveal/tests/reveal_ownership.rs
expression: out
---
greet(name: &str) -> str
main() -> ()
