crates/crisp-reveal/tests/snapshots/reveal_ownership__reveal_server_ownership.snap
---
source: crates/crisp-reveal/tests/reveal_ownership.rs
expression: out
---
greet() -> str
main() -> ()
